# Hacknarok2024

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pico_sdk_import.cmake
C-Obsolete/: README.md  debug_readme.md
C-Obsolete/pico-sdk/src/rp2_common/boot_stage2/: bs2_default_padded_checksummed.S
cmake/usb/: cmake_install.cmake
main/: encoder.ino  main.ino  proximity.ino  revolutions.ino  screen.ino  server.ino  server.py  temperature.ino
revolutions_copy_20240407014242/: revolutions_copy_20240407014242.ino
